--- a/package.json
+++ b/package.json
@@ -3,17 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^1.0.0",
+    "@material-ui/icons": "^1.0.0",
+    "@types/lodash": "^4.14.109",
     "@types/material-ui": "^0.21.1",
+    "@types/moment": "^2.13.0",
     "@types/node-fetch": "^1.6.8",
+    "@types/react-datepicker": "^1.1.2",
     "@types/react-redux": "^5.0.16",
+    "@types/react-router-dom": "^4.2.6",
     "@types/reselect": "^2.2.0",
     "babel-polyfill": "^6.26.0",
     "exponential-moving-average": "^1.0.0",
-    "material-ui": "^0.20.0",
+    "moment": "^2.22.1",
     "node-fetch": "^2.1.2",
     "react": "^16.3.2",
+    "react-datepicker": "^1.4.1",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts-ts": "2.15.1",
     "redux": "^3.7.2",
     "redux-devtools": "^3.4.1",
